--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,12 @@
          "local_path": "html/main.html"
       }
    },
+   "icons": {
+      "16": "icons/16.png",
+      "32": "icons/32.png",
+      "48": "icons/48.png",
+      "128": "icons/128.png"
+   },
    "description": "Make Reddit look as cool as Slack",
    "manifest_version": 2,
    "name": "Reddit++",
